tests/invalid/duplicate_let_toplevel.eff
let x = 5
and y = 6
and x = 7
