tests/invalid/duplicate_let_toplevel.eff.ref
Syntax error (file "./duplicate_let_toplevel.eff", line 1, char 5):
Several definitions of x
